# soroban-boilerplate

./: .cursorrules  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.agents/workflows/: project-rules.md
contracts/hello_world/src/: lib.rs  test.rs
contracts/increment/src/: lib.rs  test.rs
contracts/increment/test_snapshots/test/: test.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs  test.rs
contracts/token/test_snapshots/test/: test_token.1.json  test_transfer_insufficient_balance.1.json
scripts/: deploy.sh  interact.sh  test_local.sh
tests/: Cargo.toml  integration.rs
tests/test_snapshots/: test_cross_contract_interaction.1.json
